@@ -235,6 +235,7 @@ BA 25- setrand now return a (huge) integer instead of a vecsmall
    35- elltors flags are now deprecated (and ignored, removed corresponding
        code)
    36- add optional flag to nfhnf / nfsnf: return transformation matrices
+   37- nfroots: factor polynomials in Q[X] over Q first
 
 Removed
    1- deprecated functions nfbasis0, nfdisc0, factorpadic0
